# takure

./: Cargo.toml  LICENSE  README.md  build.rs  takure.toml
.github/workflows/: build.yml
src/: configuration.rs  helpers.rs  lib.rs  log.rs  sys.rs  takure.rs
src/handlers/: scores.rs
src/types/: game.rs  mod.rs  tachi.rs
