[package]
name = "takure"
version = "0.2.1"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true  # Enable link-time optimization.
codegen-units = 1
panic = "abort"

[dependencies]
winapi = { version = "0.3", features = ["minwindef", "windef", "winuser", "libloaderapi", "processthreadsapi", "winbase", "consoleapi"] }
crochet = { git = "https://github.com/auxbh/crochet" }
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
confy = "0.5"
anyhow = "1.0"
lazy_static = "1.4"
ureq = { version = "2.6", features = ["json"] }
url = "2.3"
either = { version = "1.8", features = ["serde"] }
num_enum = "0.6"
chrono = "0.4"

[build-dependencies]
vergen = { version = "8.0.0", features = ["build", "cargo", "git", "gitcl"] }